# mbase-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  types.rs
src/codec/: atbash.rs  base16.rs  base2_8.rs  base32.rs  base32human.rs  base32wordsafe.rs  base36.rs  base37.rs  base45.rs  base58.rs  base58ripple.rs  base62.rs  base64.rs  base65536.rs  base85.rs  base85chunked.rs  base85rfc1924.rs  base91.rs  base92.rs  baudot.rs  bech32.rs  braille.rs  bubblebabble.rs  ipv6.rs  mod.rs  morse.rs  proquint.rs  punycode.rs  quotedprintable.rs  registry.rs  rfc1924.rs  rot.rs  simple_text.rs  unicode_tap.rs  urlencoding.rs  util.rs  uuencode.rs
src/commands/: conv.rs  dec.rs  detect.rs  enc.rs  explain.rs  fmt.rs  info.rs  list.rs  mod.rs  verify.rs
src/io/: input.rs  mod.rs  output.rs
